<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_location_direction"
        android:icon="@drawable/ic_directions_black_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_mapa_normal"
        android:title="@string/mapa_normal"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_mapa_satelite"
        android:title="@string/mapa_satelite"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_mapa_terreno"
        android:title="@string/mapa_terreno"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_mapa_hibrido"
        android:title="@string/mapa_hibrido"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/mapa_zoom_im"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/mapa_zoom_out"
        app:showAsAction="never"
        />
</menu>